LoRaWAN with RN2483

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,2 @@
-idf_component_register(SRCS "uhttpServer.c" "main.c" "uwifi.c" "mLED.c"
-                    PRIV_REQUIRES esp_wifi nvs_flash esp_http_server esp_driver_gpio
+idf_component_register(SRCS "uUART.c" "mRN2483.c" "main.c"
                     INCLUDE_DIRS ".")
