working intemediary code config

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "uUART.c" "mRN2483.c" "uI2C.c" "main.c"
+idf_component_register(SRCS "main.c" "uUART.c" "mRN2483.c" "uI2C.c"
                     INCLUDE_DIRS ".")
