--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c" "adxl_sleep_manager.c" "uUART.c" "mRN2483.c" "uI2C.c"
+idf_component_register(SRCS "main.c" "mSleepManager.c" "uUART.c" "mRN2483.c" 
                     INCLUDE_DIRS ".")
