--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c" "mSleepManager.c" "uUART.c" "mRN2483.c" "mGNSS.c" "mDigitalIO.c"
+idf_component_register(SRCS "mAnalogIO.c" "main.c" "mSleepManager.c" "uUART.c" "mRN2483.c" "mGNSS.c" "mDigitalIO.c"
                     INCLUDE_DIRS ".")
